cmake_minimum_required(VERSION 3.31)
set(CMAKE_CXX_STANDARD 17)
project(lab03)
add_subdirectory(formatter_lib)
add_subdirectory(formatter_ex_lib)
add_subdirectory(hello_world_application)
add_subdirectory(solver_lib)
add_subdirectory(solver_application)
set(CPACK_PACKAGE_NAME "build")
set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (>= 2.34)")
include(CPack)